# OpenGL_VsCode

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
include/learnopengl/: shader_s.h
resources/shader/: 3_4_tex2D.fs  3_4_tex2D.vs
src/: CH1_01_S2_2Triggle.cpp  CH1_01_Triggle.cpp  glad.c  main.cpp
src/01_getting_started/CH1_01_S2_2Triggle/: CH1_01_S2_2Triggle.cpp
src/01_getting_started/CH1_01_Triggle/: CH1_01_Triggle.cpp
src/01_getting_started/CH1_01_Triggle_EBO/: CH1_01_Triggle_EBO.cpp
src/01_getting_started/CH1_02_Triggle_Uniform/: CH1_02_Triggle_Uniform.cpp
src/01_getting_started/CH1_02_Triggle_Uniform_Shader/: CH1_02_Triggle_Uniform_Shader.cpp
src/01_getting_started/CH2_02_Tex2D/: CH2_02_Tex2D.cpp
