cmake_minimum_required(VERSION 3.0.0)
project(MyOpenGL VERSION 0.1.0)

# 使用 C++ 17 标准
set(CMAKE_CXX_STANDARD 17)

# 设置代码文件
set(SRC_DIR ${PROJECT_SOURCE_DIR}/src/)

# 添加头文件
set(HEADER_DIR ${PROJECT_SOURCE_DIR}/include/)
set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib/)
include_directories(${HEADER_DIR} ${LIB_DIR})

# 添加目标链接
set(GLFW_LINK ${LIB_DIR}libglfw.3.dylib)
link_libraries(${GLFW_LINK})

# 执行编译命令
# set(SOURCES ${SRC_DIR}glad.c ${SRC_DIR}CH1_01_Triggle.cpp)
# set(SOURCES ${SRC_DIR}glad.c ${SRC_DIR}CH1_01_Triggle_EBO.cpp)
set(SOURCES ${SRC_DIR}glad.c ${SRC_DIR}CH1_01_S2_2Triggle.cpp)




add_executable(MyOpenGL ${SOURCES})

# 链接系统的 OpenGL 框架
if (APPLE)
    target_link_libraries(MyOpenGL "-framework OpenGL")
endif()

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

# 第一次执行
# mkdir build
# cd build
# cmake ..


# 在build 目录下执行  make


#  然后执行
#  ./MyOpenGL

